# ArUcoInpaintingTool

./: .gitignore  00000000_with_colour_with_colour.ply  00000001_with_colour.ply  00000003_with_colour_with_colour.ply  00000004_with_colour.ply  ColouredClouds00000002_with_colour.ply  ColouredClouds00000002_with_colour_with_colour.ply  ColouredClouds00000004_with_colour_with_colour.ply  README.md  inpaintingAruco.py  pixelcolor0.ply  pixelcolor1.ply  pixelcolor2.ply  pixelcolor3.ply  pixelcolor4.ply  pixelcolor5.ply  pixelcolor6.ply  pixelcolor7.ply  pixelcolor8.ply  pixelcolor9.ply
3DVision/stereo/Code/: CMakeCache.txt  Makefile  cmake_install.cmake  viewOpenni
3DVision/stereo/Depth_Images/: 00000000_with_color.ply  00000003_with_color.ply  00000005_with_color.ply  pixelcolor4.ply
3DVision/stereo/pointclouds/: CMakeCache.txt  CMakeLists.txt  Makefile  calib  cmake_install.cmake  display_ply.cpp
ColouredClouds/: 00000001_with_colour_with_colour.ply  00000003_with_colour.ply  00000004_with_colour_with_colour.ply  00000007_with_colour.ply
pointclouds/: CMakeCache.txt  Makefile  calib  cmake_install.cmake  display_ply.cpp
